<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/add_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/enter_year"
        android:inputType="number" />

    <EditText
        android:id="@+id/add_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_year"
        android:hint="@string/enter_country"
        android:inputType="text" />

    <Button
        android:id="@+id/add_values_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_country"
        android:onClick="addValues"
        android:text="@string/add_values_button" />

</RelativeLayout>